[package]
name = "donburako-macro"
version = "0.1.0"
edition = "2021"
authors = ["ShizukaKokoro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"

convert_case = "0"

[dev-dependencies]
pretty_assertions = "1"
